# bigint-poly

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: polynomial.rs
src/: errors.rs  lib.rs  polynomial.rs  utils.rs
tests/: lib.rs  polynomial.rs  utils.rs
