[package]
name = "bigint-poly"
version = "0.1.0"
edition = "2024"
authors = ["Gnosis Guild"]
description = "A big integer polynomial library for cryptographic ops"
homepage = "https://github.com/gnosisguild/bigint-poly"
repository = "https://github.com/gnosisguild/bigint-poly"
license = "LGPL-3.0"
readme = "README.md"
keywords = ["mathematics", "numerics", "bignum", "polynomials", "cryptography", "lattice"]
categories = ["mathematics", "cryptography", "science"]
rust-version = "1.86.0"

[dependencies]
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
serde = ["dep:serde"]

[[bench]]
name = "polynomial"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
